# ServerCleanUpTools

./: Archive-OldFiles.ps1  README.md  Sync-NTFSPermissions.ps1
archive-old-files/: Cargo.toml  README.md  setup-cross-compile.sh
archive-old-files/.cargo/: config.toml
archive-old-files/src/: age_basis.rs  cli.rs  config.rs  email.rs  format_util.rs  html_report.rs  job.rs  main.rs  path_util.rs  run_log.rs  runner.rs  win_domain.rs  win_dpapi.rs  win_owner.rs  win_shares.rs
